assets/css/style.css
/* ... */
section#contact dl div { overflow:hidden; }
section#contact dl { margin-top:3em; }

/* ---- BLOG // ARCHIVE ---- */
.blog-archive h1 { margin:3em 3em 2em;}
.blog-archive h1 a:link, .blog-archive h1 a:visited, .blog-archive h1 a:active, .blog-archive h1 a:hover { color:#333; text-decoration:none; }
.blog-archive h1 span { border:#515151 1px solid; font-family:"Flama Light"; font-size:1.25em; text-transform:uppercase; text-align:center; padding:7px 50px; }

.blog-archive h2 { font-size:2.5em; font-family:"Flama Ultra"; }
.blog-archive h2 a { color:#333; }

.blog-archive article { margin-bottom:3em; }
.blog-archive article:first-child { font-size:1.2em; background:#fafafa; }

.blog-archive article .meta { color:#555; font-family:"Flama Light"; margin-top:.5em; }
.blog-archive article:first-child .meta { color:#777; font-family:"Flama Light"; margin-top:1.5em; }

@media only screen and (min-width : 768px) { /* .sm size */
.blog-archive article { padding:20px 50px; }
.blog-archive article:first-child { padding:10px 50px 30px 50px; }
}

/* ---- BLOG // GLOBAL SINGLE POSTS ---- */
.blog-single article { margin-top:5em; }
.blog-single article .meta { font-family:"Flama Thin"; font-size:1em; letter-spacing:1px; vertical-align:bottom; color:#777; margin-bottom:0; }
.blog-single article .meta a { color:#777; }

.blog-single article p { }
.blog-single article .leading { font-size:1.3em; font-family:"Flama"; color:#444; line-height:1.5em; margin-bottom:1.5em; margin-top:4em; }

.blog-single article strong { font-family:"Flama" }
.blog-single article em { font-family:"Flama Light"; font-style:italic; }

.blog-single article img { max-width:100%; height:auto; margin:2.5em 0 4.5em;  }

.blog-single article h1, .blog-single article h2, .blog-single article h3, .blog-single article h4, .blog-single article h5, .blog-single article h6 { margin-top:2em; margin-bottom:0.5em; font-family:"Flama Ultra"; }
.blog-single article h1 { font-size:4.5em; margin-top:1em; margin-bottom:0.2em; font-family:"Flama Thin"; color:#000; }
.blog-single article h2 { font-size:3.5em; margin-top:1em; font-family:"Flama Thin"; color:#000; }
.blog-single article h3 { font-size:3em; color:#555; margin-top:1.5em; }
.blog-single article h4 { font-size:2em; color:#222; }
.blog-single article h5 { font-size:1.65em; font-family:"Flama Light"; color:#555; }
.blog-single article h6 { font-size:1.45em; font-family:"Flama Light"; color:#333; }

.blog-single article ul, .blog-single article ol { list-style-position:outside; margin:1em 0;  }
.blog-single article ul { list-style-type:square; }
.blog-single article ol { list-style-type:decimal; }
.blog-single article ul ul, .blog-single article ol ul { list-style-type:circle; }
.blog-single article ul ol, .blog-single article ol ol { list-style-type:lower-alpha; }
.blog-single article li { color:#333; font-family:"Flama Light"; font-size:1.3em; margin-bottom:0.5em; }

.blog-single article blockquote { padding-left:1.5em; border-left-color:#d88e2f; background-color:#f9f9f9; }
.blog-single article blockquote p { }
.blog-single article blockquote cite { font-size:0.9em; font-family:"Flama Light"; }

.blog-single article .footnotes { font-size:0.65em; margin:100px 20px 0px 20px; }
section.prevnext { margin:0; }
section.prevnext hr { width:75%; margin:30px auto 50px auto; }
.prevnext a:visited, .prevnext a:link { padding:20px; text-transform:uppercase; color:#aaa; }
.prevnext a:hover, .prevnext a:active { background-color:#efefef; }
section.prevnext a.prev { text-align:right; }

@media only screen and (min-width : 768px) { /* .sm size */
    .blog-single article { font-size:105%; }
    .blog-single article ul, .blog-single article ol {  margin:1em 2em; }
    .blog-single article blockquote { margin:2em; }
    .blog-single article blockquote p { }
    .blog-single article blockquote cite { }
}
@media only screen and (min-width : 992px) { /* .md size */
    .blog-single article { font-size:110%; }
    .blog-single article blockquote {  }

}

@media only screen and (min-width : 1200px) { /* .lg size */
    .blog-single article { font-size:115%; }
    .blog-single article blockquote {  }
}


/* ---- BLOG // ARTICLE POST ---- */


/* ---- BLOG // LINK POST ---- */
.blog-link article blockquote { margin-top:4em; font-family:"Flama Light"; font-size:1.25em; }
.blog-link article h1 a { text-decoration:none; }

/* ---- BLOG // VIDEO POST ---- */

.blog-link article div.media { margin-top:4em; margin-bottom:4em; }


/* ---- WORK // ARCHIVE ---- */
.work-archive h1 { margin:3em 3em 2em;}
.work-archive h1 a:link, .work-archive h1 a:visited, .work-archive h1 a:active, .work-archive h1 a:hover { color:#333; text-decoration:none; }
.work-archive h1 span { border:#515151 1px solid; font-family:"Flama Light"; font-size:1.25em; text-transform:uppercase; text-align:center; padding:7px 50px; }

/* ---- WORK // SINGLE POST ---- */
.work-single article { margin-top:150px; }
.work-single article h1 { font-size:5em;  }
.work-single article div { margin-bottom:2em; }
.work-single .media .item { margin-bottom:0.5em; }
.work-single .crew, .work-single .crew a { color:#999; }

@media only screen and (min-width : 768px) { /* .sm size */
.work-single .media .item { margin-bottom:1em; }
.work-single .media .item:first-child { margin-top:1.5em; }
}
@media only screen and (min-width : 992px) { /* .md size */
.work-single .media .item { margin-bottom:1.5em; }
.work-single .media .item:first-child { margin-top:1.5em; }
}
@media only screen and (min-width : 1200px) { /* .lg size */
}





/* ---- FOOTER ---- */
footer { background:#2f2f2f; padding:50px 0; margin-top:75px; color:#aaa; font-size:0.75em; }
footer p strong { font-family:"Flama"; color:#ddd; font-size:1.1em; }
footer a:link, footer a:visited { color:#cfcfcf; padding:1px; }
footer a:hover, footer a:active { color:#eee; }

#copyright { background:#222; padding-top:15px; text-align:right; font-size:0.65em; color:#666; }

/* ---- UTILITY ---- */
.orange { color:#ed8046; }
/* ... */

